--- a/src/Trello.net.Tests/Trello.net.Tests.csproj
+++ b/src/Trello.net.Tests/Trello.net.Tests.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExcludeFromSourceControl.cs" />
     <Compile Include="Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
