--- a/src/Trello.net.Tests/Trello.net.Tests.csproj
+++ b/src/Trello.net.Tests/Trello.net.Tests.csproj
@@ -62,6 +62,8 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ExcludeFromSourceControl.cs" />
+    <Compile Include="TestBase.cs" />
+    <Compile Include="TestConstants.cs" />
     <Compile Include="Tests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
