--- a/src/TrelloNet/TrelloNet.csproj
+++ b/src/TrelloNet/TrelloNet.csproj
@@ -44,11 +44,15 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions\BaseAction.cs" />
+    <Compile Include="Actions\CreateAction.cs" />
+    <Compile Include="Actions\DeleteAction.cs" />
+    <Compile Include="Actions\GetAction.cs" />
+    <Compile Include="Actions\UpdateAction.cs" />
     <Compile Include="Domain\Card.cs" />
     <Compile Include="Domain\CardData.cs" />
     <Compile Include="Domain\Board.cs" />
     <Compile Include="Domain\Entity.cs" />
-    <Compile Include="Domain\Resources.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Api.cs" />
     <Compile Include="ServiceManager.cs" />
