--- a/src/TrelloNet/TrelloNet.csproj
+++ b/src/TrelloNet/TrelloNet.csproj
@@ -49,9 +49,11 @@
     <Compile Include="Actions\DeleteAction.cs" />
     <Compile Include="Actions\GetAction.cs" />
     <Compile Include="Actions\UpdateAction.cs" />
+    <Compile Include="Domain\Action.cs" />
     <Compile Include="Domain\Card.cs" />
     <Compile Include="Domain\CardData.cs" />
     <Compile Include="Domain\Board.cs" />
+    <Compile Include="Domain\Data.cs" />
     <Compile Include="Domain\Entity.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Api.cs" />
