moved actions tests to actions_tests class. gonna be a bunch of tests around actions

--- a/src/Trello.net.Tests/Trello.net.Tests.csproj
+++ b/src/Trello.net.Tests/Trello.net.Tests.csproj
@@ -61,6 +61,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Actions_Tests.cs" />
     <Compile Include="TestBase.cs" />
     <Compile Include="TestConstants.cs" />
     <Compile Include="Tests.cs" />
