--- a/src/TrelloNet/TrelloNet.csproj
+++ b/src/TrelloNet/TrelloNet.csproj
@@ -55,6 +55,7 @@
     <Compile Include="Domain\Board.cs" />
     <Compile Include="Domain\Data.cs" />
     <Compile Include="Domain\Entity.cs" />
+    <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TrelloNet.cs" />
     <Compile Include="ServiceManager.cs" />
