--- a/src/TrelloNet/TrelloNet.csproj
+++ b/src/TrelloNet/TrelloNet.csproj
@@ -57,7 +57,7 @@
     <Compile Include="Domain\Entity.cs" />
     <Compile Include="Extensions\StringExtensions.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TrelloNet.cs" />
+    <Compile Include="TrelloWrapper.cs" />
     <Compile Include="ServiceManager.cs" />
   </ItemGroup>
   <ItemGroup />
