--- a/src/Trello.net.Tests/Trello.net.Tests.csproj
+++ b/src/Trello.net.Tests/Trello.net.Tests.csproj
@@ -61,7 +61,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Actions_Tests.cs" />
+    <Compile Include="Get_Card_Tests.cs" />
+    <Compile Include="Get_Member_Tests.cs" />
+    <Compile Include="Get_Actions_Tests.cs" />
     <Compile Include="TestBase.cs" />
     <Compile Include="TestConstants.cs" />
     <Compile Include="Tests.cs" />
