Adding new properties to Domain/Board.cs and Domain/Card.cs. Added Badges.cs class to represent card due date. Updated all the action types with the currently documented action types.

--- a/src/TrelloNet/TrelloNet.csproj
+++ b/src/TrelloNet/TrelloNet.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Actions\UpdateAction.cs" />
     <Compile Include="Domain\Action.cs" />
     <Compile Include="Domain\ActionType.cs" />
+    <Compile Include="Domain\Badges.cs" />
     <Compile Include="Domain\Card.cs" />
     <Compile Include="Domain\CardData.cs" />
     <Compile Include="Domain\Board.cs" />
